[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Package of five math games"
authors = ["Gregory Kurkin <monstercondo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/GregorKurkin/python-project-49.git"
classifiers = [
Topic :: Games/Entertainment :: Puzzle Games
Operating System :: POSIX :: Linux
License :: Freeware
Programming Language :: Python :: 3.8
Natural Language :: English
]
# packages = [{include = "hexlet_code"}]
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.8.1"
prompt = "^0.4.1"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
